2010-08-06  Kenichi Handa  <handa@m17n.org>

	* charset.c: Include <stdlib.h>
	(struct charset_sort_data): New struct.
	(charset_compare): New function.
	(Fsort_charsets): New funciton.
	(syms_of_charset): Declare Fsort_charsets as a Lisp function.

	* coding.c (decode_coding_iso_2022): Fix checking of dimension
	number in CTEXT extended segment.

2010-08-01  Juanma Barranquero  <lekktu@gmail.com>

	* w32fns.c (syms_of_w32fns) <x-max-tooltip-size>: Fix typo in docstring.
	* xfns.c (syms_of_xfns) <x-max-tooltip-size>: Reflow docstring.

2010-07-30  Juanma Barranquero  <lekktu@gmail.com>

	* fns.c (Fsubstring_no_properties, Fnthcdr, Ffeaturep)
	(Fhash_table_size): Fix typos in docstrings.
	(Fmake_hash_table): Doc fix.

2010-07-28  Juanma Barranquero  <lekktu@gmail.com>

	* minibuf.c (syms_of_minibuf) <read-buffer-function>:
	Doc fix (bug#5625).

2010-07-27  Ken Brown  <kbrown@cornell.edu>

	* dired.c (DIRENTRY_NONEMPTY) [cygwin]: Use d_ino instead of
	the MSDOS definition.

2010-07-25  Christoph Scholtes  <cschol2112@gmail.com>

	* minibuf.c (Fread_buffer): Doc fix (bug#6528).

2010-07-22  Christoph Scholtes  <cschol2112@gmail.com>

	* window.c (Fwindow_height): Doc fix (bug#6518).

2010-07-21  Juanma Barranquero  <lekktu@gmail.com>

	* buffer.c (syms_of_buffer) <fringe-indicator-alist>: Doc fix.

2010-07-17  Jan Djärv  <jan.h.d@swipnet.se>

	* gtkutil.c (xg_event_is_for_menubar): Also check that event window
	is related to the menu bar (Bug#6499).

2010-07-14  Jan Djärv  <jan.h.d@swipnet.se>

	* xterm.h (x_menubar_window_to_frame): Second parameter is XEvent*.

	* xterm.c (handle_one_xevent): Pass event to x_menubar_window_to_frame.

	* xmenu.c (x_activate_menubar): Revert previous fix for Bug#6499,
	i.e. don't put back ButtonRelease (Bug#6608).

	* xfns.c (x_menubar_window_to_frame): Take XEvent as second parameter
	instead of Window.  Call xg_event_is_for_menubar when
	USE_GTK (Bug#6499).

	* gtkutil.h (xg_event_is_for_menubar): Declare.
