@@ -1,3 +1,9 @@
+2010-08-09  Peter O'Gorman <pogma@thewrittenword.com>  (tiny change)
+
+	* s/hpux10-20.h (HAVE_TERMIOS, NO_TERMIO, ORDINARY_LINK): New
+	definitions.
+	(HAVE_TERMIO): Remove.
+
 2010-08-06  Kenichi Handa  <handa@m17n.org>
 
 	* charset.c: Include <stdlib.h>
